Fixe spacing of header

--- a/web/homepage.css
+++ b/web/homepage.css
@@ -6,6 +6,10 @@ div {
 	text-align: center;
 }
 
+h1 {
+	margin-top: 0px;
+}
+
 h2 {
 	text-decoration: underline;
 }
@@ -83,15 +87,14 @@ p {
   padding: 5px 0;
   border-radius: 6px;
  
-  /* Position the tooltip text - see examples below! */
+ 
   position: absolute;
   z-index: 1;
   bottom: 100%;
   left: 50%;
-  margin-left: -60px;
 }
 
-/* Show the tooltip text when you mouse over the tooltip container */
+
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
@@ -99,7 +102,7 @@ p {
 .tooltip .tooltiptext::after {
   content: " ";
   position: absolute;
-  top: 100%; /* At the bottom of the tooltip */
+  top: 100%; 
   left: 50%;
   margin-left: -5px;
   border-width: 5px;
